--- a/app/src/main/res/layout/activity_user_information.xml
+++ b/app/src/main/res/layout/activity_user_information.xml
@@ -7,57 +7,51 @@
     tools:context=".UserInformation"
     tools:layout_editor_absoluteY="81dp">
 
-    <EditText
-        android:id="@+id/etUsername"
-        android:layout_width="303dp"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="Name"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.456"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.086" />
+    <TextView
+        android:id="@+id/tvAdhaar"
+        android:layout_width="247dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="8dp"
+        android:text="TextView"
+        app:layout_constraintBottom_toTopOf="@+id/tvUserType"
+        app:layout_constraintEnd_toEndOf="@+id/tvEmail"
+        app:layout_constraintStart_toStartOf="@+id/tvEmail"
+        app:layout_constraintTop_toBottomOf="@+id/tvEmail" />
 
-    <EditText
-        android:id="@+id/etPhone"
-        android:layout_width="307dp"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="Phone Number"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.48"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.322" />
+    <TextView
+        android:id="@+id/tvEmail"
+        android:layout_width="247dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="8dp"
+        android:text="TextView"
+        app:layout_constraintBottom_toTopOf="@+id/tvAdhaar"
+        app:layout_constraintEnd_toEndOf="@+id/tvUsername"
+        app:layout_constraintStart_toStartOf="@+id/tvUsername"
+        app:layout_constraintTop_toBottomOf="@+id/tvUsername" />
 
-    <EditText
-        android:id="@+id/etAddress"
-        style="@android:style/Widget.AutoCompleteTextView"
-        android:layout_width="305dp"
-        android:layout_height="159dp"
-        android:ems="10"
-        android:inputType="textMultiLine|textPostalAddress"
-        android:text="Address"
-        app:layout_constraintBottom_toBottomOf="parent"
+    <TextView
+        android:id="@+id/tvUsername"
+        android:layout_width="247dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="36dp"
+        android:layout_marginBottom="8dp"
+        android:text="TextView"
+        app:layout_constraintBottom_toTopOf="@+id/tvEmail"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.506"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.676" />
+        app:layout_constraintVertical_chainStyle="spread_inside" />
 
-    <Button
-        android:id="@+id/btnSaveUserInformation"
-        android:layout_width="116dp"
-        android:layout_height="wrap_content"
-        android:text="Save"
+    <TextView
+        android:id="@+id/tvUserType"
+        android:layout_width="247dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="439dp"
+        android:text="TextView"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.909" />
+        app:layout_constraintEnd_toEndOf="@+id/tvAdhaar"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/tvAdhaar"
+        app:layout_constraintTop_toBottomOf="@+id/tvAdhaar" />
+
 </android.support.constraint.ConstraintLayout>
