--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -50,4 +50,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnRegisterNewCase" />
 
+    <Button
+        android:id="@+id/btnStats"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="1dp"
+        android:layout_marginBottom="14dp"
+        android:text="Stats"
+        app:layout_constraintBottom_toTopOf="@+id/btnRegisterNewCase"
+        app:layout_constraintEnd_toStartOf="@+id/btnRegisterNewCase" />
+
 </android.support.constraint.ConstraintLayout>
