--- a/app/src/main/res/layout/activity_maps2.xml
+++ b/app/src/main/res/layout/activity_maps2.xml
@@ -6,16 +6,9 @@
     android:layout_height="match_parent"
     tools:context=".Maps2Activity">
 
-    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/map"
-        android:name="com.google.android.gms.maps.SupportMapFragment"
+    <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="250dp"
-        tools:context=".Maps2Activity"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="0dp"
-        android:transitionName="map_transition"
-         />
+        android:layout_height="match_parent">
 
+    </android.support.constraint.ConstraintLayout>
 </LinearLayout>
