--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Main2Activity">
+    tools:context=".UserActivity">
 
     <LinearLayout
         android:id="@+id/linearLayout"
@@ -20,7 +20,7 @@
         app:layout_constraintVertical_bias="0.007">
 
         <TextView
-            android:id="@+id/editText"
+            android:id="@+id/tvDistrict"
             android:layout_width="267dp"
             android:layout_height="44dp"
             android:layout_weight="1"
@@ -35,14 +35,17 @@
             tools:layout_editor_absoluteX="28dp" />
 
         <Button
-            android:id="@+id/button"
+            android:id="@+id/changeLoc"
             android:layout_width="100dp"
             android:layout_height="40dp"
             android:text="Locate"
             tools:layout_editor_absoluteX="303dp" />
+
     </LinearLayout>
 
+
     <LinearLayout
+        android:id="@+id/linearLayout3"
         android:layout_width="match_parent"
         android:layout_height="105dp"
         android:layout_marginTop="40dp"
@@ -67,7 +70,7 @@
             tools:layout_editor_absoluteY="37dp" />
 
         <EditText
-            android:id="@+id/editText2"
+            android:id="@+id/etSymptoms"
             style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="54dp"
@@ -80,6 +83,7 @@
             android:paddingRight="10dp"
             android:textColor="@color/monsoon"
             android:textSize="18dp"
+            android:imeOptions="actionDone"
             tools:layout_editor_absoluteX="14dp"
             tools:layout_editor_absoluteY="80dp" />
     </LinearLayout>
@@ -165,7 +169,7 @@
         <TextView
             android:id="@+id/textView7"
             android:layout_width="match_parent"
-            android:layout_height="100dp"
+            android:layout_height="70dp"
             android:layout_marginBottom="10dp"
             android:background="@color/lightblue"
             android:gravity="center_vertical"
@@ -181,7 +185,7 @@
         <TextView
             android:id="@+id/textView8"
             android:layout_width="match_parent"
-            android:layout_height="100dp"
+            android:layout_height="70dp"
             android:background="@color/lightblue"
             android:gravity="center_vertical"
             android:paddingLeft="10dp"
@@ -196,12 +200,13 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/linearLayout4"
         android:layout_width="match_parent"
         android:layout_height="276dp"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
         android:orientation="vertical"
-        app:layout_constraintBottom_toTopOf="@+id/button2"
+        app:layout_constraintBottom_toTopOf="@+id/viewMaps"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -229,7 +234,27 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical" >
+                android:orientation="vertical">
+
+                <android.support.v7.widget.CardView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" >
+
+                    <WebView
+                        android:id="@+id/wvStat6"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent" />
+                </android.support.v7.widget.CardView>
+
+                <android.support.v7.widget.CardView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" >
+
+                    <WebView
+                        android:id="@+id/wvStat5"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent" />
+                </android.support.v7.widget.CardView>
 
                 <android.support.v7.widget.CardView
                     android:layout_width="match_parent"
@@ -273,37 +298,10 @@
             </LinearLayout>
         </ScrollView>
 
-
-        <!--<WebView-->
-            <!--android:id="@+id/wvStat3"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="match_parent">-->
-
-        <!--</WebView>-->
-
-        <!--<WebView-->
-            <!--android:id="@+id/wvStat4"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="match_parent" />-->
-
-        <!--<WebView-->
-            <!--android:id="@+id/wvStat1"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="match_parent" />-->
-
-        <!--<WebView-->
-            <!--android:id="@+id/wvStat2"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="match_parent">-->
-
-        <!--</WebView>-->
-
-
-
     </LinearLayout>
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/viewMaps"
         android:layout_width="match_parent"
         android:layout_height="54dp"
         android:layout_marginTop="480dp"
@@ -314,6 +312,28 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout"
         app:layout_constraintVertical_bias="1.0" />
+
+    <LinearLayout
+        android:id="@+id/mapLayout"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="52dp"
+        android:layout_weight="1"
+        android:orientation="vertical"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_editor_absoluteX="0dp">
+
+        <fragment
+            android:id="@+id/mapFragment2"
+            class="com.google.android.gms.maps.SupportMapFragment"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toTopOf="@+id/btnAddCase"
+            app:layout_constraintEnd_toEndOf="@+id/btnAddCase"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="@+id/btnAddCase"
+            app:layout_constraintTop_toTopOf="parent" />
+    </LinearLayout>
 
 
 </android.support.constraint.ConstraintLayout>
