--- a/app/src/main/res/layout/symptoms_activity.xml
+++ b/app/src/main/res/layout/symptoms_activity.xml
@@ -7,7 +7,7 @@
     tools:context=".SymptomsActivity">
 
     <EditText
-        android:id="@+id/editText"
+        android:id="@+id/tvDistrict"
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:layout_marginStart="2dp"
@@ -40,13 +40,13 @@
         android:layout_marginTop="54dp"
         android:layout_marginBottom="53dp"
         android:text="Report/Diagnose a patient"
-        app:layout_constraintBottom_toBottomOf="@+id/editText2"
+        app:layout_constraintBottom_toBottomOf="@+id/etSymptoms"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/editText2"
+        android:id="@+id/etSymptoms"
         android:layout_width="wrap_content"
         android:layout_height="50dp"
         android:layout_marginTop="41dp"
@@ -55,7 +55,7 @@
         android:text="Disease Name/Symptoms"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText" />
+        app:layout_constraintTop_toBottomOf="@+id/tvDistrict" />
 
     <Button
         android:id="@+id/button3"
